# capstone-stock-prediction

./: .gitignore  Intersections_4.txt  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  script.sh  trading.sh
docs/: mkdocs.yml
docs/docs/: index.md
layers/Formers/: Embed.py  SelfAttention_Family.py  Transformer_EncDec.py  masking.py
layers/TimesNet/: __init__.py
notebooks/: test.ipynb
reports/output/: SEntFiN-v1.1_model_agreement_matrix.csv  SEntFiN-v1.1_sentiment_analysis_results.csv  comprehensive_analysis_report.txt  comprehensive_analysis_results.json  lstm_feature_importance_analysis.txt
reports/simulation/: AAPL_lstm_Binary_Price_deberta_trading_analysis.json  AAPL_lstm_Binary_Price_deberta_trading_analysis_1024.json  AAPL_lstm_Binary_Price_deberta_trading_analysis_128.json  AAPL_lstm_Binary_Price_deberta_trading_analysis_16.json  AAPL_lstm_Binary_Price_deberta_trading_analysis_2048.json  AAPL_lstm_Binary_Price_finbert_trading_analysis.json  (+398 more)
scripts/: README.md  analyze_lstm_feature_importance.py  analyze_simulation.py  architecture_by_output_analysis.py  architecture_metrics_report.py  comprehensive_analysis.py  create_architecture_output_table.py  generate_aggregated_visualizations.py  generate_visualizations.py  lstm_trading_analysis.py  run_comprehensive_analysis.sh  run_full_analysis.sh  trading.sh
sentiment_analysis/: FinancialSentimentComparison.py  ModelTrainer.py  main.py
stock_prediction/: dataset.py  dataset_pipeline.py  features.py  plots.py  trading_simulation.py
utils/: ExpConfigs.py  configs.py  metrics.py  tools.py
(+759 files in other folders)
