[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "stock_prediction"
version = "0.0.1"
description = "A stock prediction framework that studies the effect of macro-economical data and financial news on stock price."
authors = [
  { name = "SNT, University of Luxembourg" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["stock_prediction"]
include = ["pyproject.toml", "stock_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["stock_prediction"]
force-sort-within-sections = true

